HDS-1211 Prevent pagination-info text from wrapping, add basic responsive layout styles

--- a/packages/components/app/styles/components/pagination.scss
+++ b/packages/components/app/styles/components/pagination.scss
@@ -23,6 +23,7 @@ $pagination-height: calc(36px + 6px);
 .hds-pagination-info {
   grid-area: left;
   justify-self: flex-start;
+  white-space: nowrap;
 }
 
 
@@ -165,4 +166,26 @@ $pagination-height: calc(36px + 6px);
     line-height: var(--token-typography-body-100-line-height);
     background-position: center right 5px;
   }
+}
+
+// Responsive layout
+// max-width is based on where component layout breaks down currently, not finalized
+@media screen and (max-width: 1000px) {
+  .hds-pagination {
+    display: flex !important;
+    flex-direction: column;
+    height: auto !important;
+
+    > * {
+      margin-right: auto;
+      margin-left: auto;
+    }
+  }
+
+  .hds-pagination-nav {
+    order: -1;
+    margin-bottom: 8px;
+  }
+
+  .hds-pagination-size-selector { display: none; }
 }
